--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -7,47 +7,67 @@
         </a>
         <div class="sidebar" style="overflow: auto;">
             <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview" role="menu">
-                    <!--*********************************************************-->
-                    <li class="nav-item active treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-edit"></i>
-                            <p>
-                                {% trans %}Posty{% endtrans %}
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('show_user_posts') }}">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>{% trans %}Przeglądaj{% endtrans %}</p>
-                                </a>
-                            </li>
-                            <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('new_post') }}">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>{% trans %}Stwórz post{% endtrans %}</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!--********************************************************-->
-                    <li class="nav-item  active treeview menu-open">
-                        <a class="nav-link" href="#">
-                            <i class="nav-icon fa fa-edit"></i>
-                            <p>
-                                {% trans %}Zadania{% endtrans %}
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview" style="display: block;">
-                            <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('show_user_quests', {id: app.user.Id}) }}">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>{% trans %}Pokaż zadania{% endtrans %}</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                <ul class="nav nav-pills nav-sidebar flex-column" data-accordion="false" data-widget="treeview"
+                    role="menu">
+                    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
+                        <!--*********************************************************-->
+                        <li class="nav-item active treeview menu-open">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-edit"></i>
+                                <p>
+                                    {% trans %}Posty{% endtrans %}
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview" style="display: block;">
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('show_user_posts') }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Przeglądaj{% endtrans %}</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('new_post') }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Stwórz post{% endtrans %}</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!--********************************************************-->
+                        <li class="nav-item  active treeview menu-open">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-edit"></i>
+                                <p>
+                                    {% trans %}Zadania{% endtrans %}
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview" style="display: block;">
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('show_user_quests', {id: app.user.Id}) }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Pokaż zadania{% endtrans %}</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% elseif is_granted('ROLE_CLIENT') %}
+                        <li class="nav-item  active treeview menu-open">
+                            <a class="nav-link" href="#">
+                                <i class="nav-icon fa fa-edit"></i>
+                                <p>
+                                    {% trans %}Projekty{% endtrans %}
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview" style="display: block;">
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('show_user_projects', {id: app.user.Id}) }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>{% trans %}Moje projekty{% endtrans %}</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% endif %}
                     <!--*********************************************************-->
                     <li class="nav-item  active treeview menu-open">
                         <a class="nav-link" href="#">
@@ -81,12 +101,12 @@
                                 </a>
                             </li>
                             {% if is_granted('ROLE_ADMIN') %}
-                            <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('edit_facebook', {id: app.user.Id}) }}">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>Facebook</p>
-                                </a>
-                            </li>
+                                <li class="nav-item archive">
+                                    <a class="nav-link button" href="{{ path('edit_facebook', {id: app.user.Id}) }}">
+                                        <i class="fa fa-circle-o nav-icon"></i>
+                                        <p>Facebook</p>
+                                    </a>
+                                </li>
                             {% endif %}
                         </ul>
                     </li>
