--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -9,16 +9,15 @@
         <div class="mt-3 mb-2">{% trans %}Data{% endtrans %}:</div>
         <input class="form-control" type="date" min="{{ minDate }}" max="{{ maxDate }}"
                name="EndDate" required>
-        <div class="mt-3 mb-2">{% trans %}Wybierz lub wprowadź nowy projekt{% endtrans %}:</div>
-        <input class="form-control" list="project" name="Project" pattern=".{3,100}" required="required"
+        <div class="mt-3 mb-2">{% trans %}Wybierz projekt{% endtrans %}:</div>
+        <select class="form-control" name="Project" pattern=".{3,100}" required="required"
                title="{% trans %}Nazwa projektu musi zawierać od 3 do 100 znaków.{% endtrans %}">
-        <datalist id="project">
             {% if projects is defined %}
                 {% for project in projects %}
-                    <option value="{{ project.name }}">{{ project.name }}</option>
+                    <option id="project" value="{{ project.name }}">{{ project.name }}</option>
                 {% endfor %}
             {% endif %}
-        </datalist>
+        </select>
         <div class="mt-3 mb-2">{% trans %}Wybierz użytkownika{% endtrans %}:</div>
         <select class="browser-default custom-select" name="user" required>
             {% for user in users %}
