--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -30,6 +30,7 @@
     <select class="browser-default custom-select" name="roles" required>
         <option value="ROLE_ADMIN" selected>{% trans %}Administrator{% endtrans %}</option>
         <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
+        <option value="ROLE_CLIENT">{% trans %}Klient{% endtrans %}</option>
     </select>
     <button class="btn btn-dark mt-3">{% trans %}Zarejestruj{% endtrans %}</button>
     {{ form_end(registrationForm) }}
