--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -23,6 +23,8 @@
                     <td>{% trans %}Administrator{% endtrans %}</td>
                 {% elseif user.roles[0] == "ROLE_USER" %}
                     <td>{% trans %}Użytkownik{% endtrans %}</td>
+                {% elseif user.roles[0] == "ROLE_CLIENT" %}
+                    <td>{% trans %}Klient{% endtrans %}</td>
                 {% endif %}
                 <td>
                     <a onclick="get_number(this.id, this.getAttribute('data-email'), this.getAttribute('data-role'))"
@@ -102,6 +104,7 @@
                         <select class="role_input browser-default custom-select" name="roles" required>
                             <option value="ROLE_ADMIN" selected="">{% trans %}Administrator{% endtrans %}</option>
                             <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
+                            <option value="ROLE_CLIENT">{% trans %}Klient{% endtrans %}</option>
                         </select>
                         <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning"
                                 type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
