Route moved to Admin Controller

--- a/templates/mainpage/hello_page.html.twig
+++ b/templates/mainpage/hello_page.html.twig
@@ -80,7 +80,7 @@
         document.getElementById("clock").innerHTML = hr + ":" + min + ":" + sec;
 
         var months = [
-            'styczeń',
+            'stycznia',
             'lutego',
             'marca',
             'kwietnia',
