--- a/templates/users/show_users.html.twig
+++ b/templates/users/show_users.html.twig
@@ -64,7 +64,7 @@
                         <bold>{% trans %}Jesteś pewien{% endtrans %}?</bold>
                     </h2>
                     <h5>{% trans %}Czy jesteś pewny, że chcesz usunąć użytkownika{% endtrans %}?</h5>
-                    <a class="action" id="/post/delete/">
+                    <a class="action" id="/user/delete/">
                         <button class="delete_user btn-lg btn-outline-danger mt-5 mr-2">{% trans %}Usuń{% endtrans %}</button>
                     </a>
                     <button class="btn-lg btn-outline-secondary mt-5 ml-2" data-dismiss="modal"
@@ -84,6 +84,7 @@
                     <form class="emailForm" method="Post" action="">
                         <input type="email" name="email" maxlength="50" class="form-control mt-3" id="exampleInputEmail"
                                aria-describedby="emailHelp" required>
+                    </form>
                 </div>
                 <button style="width:95%; margin:auto;" class="mt-3 mb-3 btn-lg btn-warning"
                         type="submit">{% trans %}Zapisz zmianę{% endtrans %}</button>
