--- a/templates/quests/edit_quest.html.twig
+++ b/templates/quests/edit_quest.html.twig
@@ -48,7 +48,7 @@
                 <option value="80" {% if quest.Status == 80 %} selected {% endif %}>80%</option>
                 <option value="100" {% if quest.Status == 100 %} selected {% endif %}>100%</option>
             </select>
-            <input class="btn btn-warning mt-4 mr-2" type="submit" value="{% trans %}Zapisz{% endtrans %}">
+            <input class="btn btn-warning mt-4 mr-2" type="submit" value="{% trans %}Zmień postęp{% endtrans %}">
             <div onclick="goBack()" class="btn btn-secondary mt-4">{% trans %}Wróć{% endtrans %}</div>
         </form>
     </div>
