--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -29,7 +29,7 @@
     <div class="mt-3 mb-1" style="font-weight: bold;">{% trans %}Rola{% endtrans %}:</div>
     <select class="browser-default custom-select" name="roles" required>
         <option value="ROLE_ADMIN" selected>{% trans %}Administrator{% endtrans %}</option>
-        <option value="ROLE_USER">{% trans %}Użytkownik{% endtrans %}</option>
+        <option value="ROLE_USER">{% trans %}Pracownik{% endtrans %}</option>
         <option value="ROLE_CLIENT">{% trans %}Klient{% endtrans %}</option>
     </select>
     <button class="btn btn-dark mt-3">{% trans %}Zarejestruj{% endtrans %}</button>
