Full name added to users entity

--- a/templates/quests/new_quest.html.twig
+++ b/templates/quests/new_quest.html.twig
@@ -21,7 +21,7 @@
         <div class="mt-3 mb-2">{% trans %}Wybierz użytkownika{% endtrans %}:</div>
         <select class="browser-default custom-select" name="user" required>
             {% for user in users %}
-                <option value="{{ user.id }}">{{ user.login }}</option>
+                <option value="{{ user.id }}">{{ user.fullName }}</option>
             {% endfor %}
         </select>
         <div class="mt-3 mb-2">
