--- a/templates/users/edit_user.html.twig
+++ b/templates/users/edit_user.html.twig
@@ -14,7 +14,13 @@
         }
     </style>
     <div class="container-fluid">
-        <h1 style="margin:25px;">{% trans %}Edytuj swoje dane{% endtrans %}</h1>
+        <h1 id="title" style="margin:25px;">{% trans %}Edytuj swoje dane{% endtrans %}</h1>
+        <span style="margin: 25px; font-size: large;">{% trans %}Imię i nazwisko{% endtrans %}
+            <input type="text" class="ml-2" value="{{ app.user.fullName }}" id="{{ app.user.id }}" style="width: 25%;">
+            <button data-id="{{ app.user.id }}" onclick="editName(this.getAttribute('data-id'))"
+                    class="btn btn-secondary ml-2">{% trans %}Zmień{% endtrans %}
+            </button>
+        </span>
         <div class="row mt-5">
             <div class="col-sm-12 col-md-6 mb-3">
                 <div class="form form_edit_user w-95">
@@ -118,6 +124,9 @@
         </div>
     </div>
     <!-- Delete avatar modal -->
+    <form id="formEditFullName" hidden>
+        <input pattern=".{3,100}" type="text" name="fullName">
+    </form>
     <script>
         document.querySelector("#avatar_form_name").setAttribute("onchange", "whenChosen(event)");
 
@@ -146,6 +155,27 @@
                 }
             }
             chosenImage.readAsDataURL(event.target.files[0]);
+        }
+
+        function editName(userId) {
+            let fullName = document.getElementById(userId).value;
+            if (fullName.length >= 3 && fullName.length <= 50) {
+                let url = '{{ path("edit_user", {id: app.user.id}) }}';
+
+                form = document.getElementById("formEditFullName");
+                form.method = "GET";
+                form.action = url;
+                form.fullName.value = fullName;
+                form.submit();
+            } else {
+                let title = document.getElementById("title");
+                title.insertAdjacentHTML("beforebegin", '<div class="mt-3 alert alert-warning alert-dismissible fade show" role="alert">' +
+                    '                        {% trans %}Te dane muszą zawierać od 3 do 50 znaków{% endtrans %}\n' +
+                    '                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">\n' +
+                    '                            <span aria-hidden="true">&times;</span>\n' +
+                    '                        </button>\n' +
+                    '                    </div>');
+            }
         }
 
         function get_number_delete(clicked_id) {
