--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -79,10 +79,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
         $(".button").click(function () {
-            let url = $(this).attr('id');
+            let url3 = $(this).attr('id');
 
             $.ajax({
-                url: url,
+                url: url3,
                 success: function (result) {
                     $(".content").html(result);
                 }
@@ -94,24 +94,24 @@
         }
 
         function changeLanguage(clicked_id) {
-            let url = '{{ path('change_lang', {lang: 'clicked_id'}) }}';
-            url = url.replace("clicked_id", clicked_id);
+            let url2 = '{{ path('change_lang', {lang: 'clicked_id'}) }}';
+            url2 = url.replace("clicked_id", clicked_id);
             $.ajax({
-                url: url,
+                url: url2,
             });
             setTimeout(function () {
                 window.location.reload();
             });
         }
 
-        const url = new URL('http://localhost:3000/hub');
+        const url = new URL('http://localhost:8080/hub');
 
         {% set conversations = app.session.get('conversations') %}
         {% for conversation in conversations %}
         url.searchParams.append('topic', '{{ conversation.id|trans }}');
         {% endfor %}
 
-        const eventSource = new EventSource(url)
+        const eventSource = new EventSource(url);
         eventSource.onmessage = e => {
             $interceptedMessage = e.data;
             document.querySelector(".messagesAlert").insertAdjacentHTML('beforeend', "<div id=\"messageAlert\" class=\"mt-3 alert alert-success\" role=\"alert\">\n" +
