--- a/templates/mainpage/sidebar.html.twig
+++ b/templates/mainpage/sidebar.html.twig
@@ -37,7 +37,8 @@
                             </a>
                             <ul class="nav nav-treeview" style="display: block;">
                                 <li class="nav-item archive">
-                                    <a class="nav-link button" href="{{ path('show_user_projects', {id: app.user.Id}) }}">
+                                    <a class="nav-link button"
+                                       href="{{ path('show_user_projects', {id: app.user.Id}) }}">
                                         <i class="fa fa-circle-o nav-icon"></i>
                                         <p>{% trans %}Moje projekty{% endtrans %}</p>
                                     </a>
@@ -100,12 +101,6 @@
                                 <a class="nav-link button" href="{{ path('show_user_posts') }}">
                                     <i class="fa fa-circle-o nav-icon"></i>
                                     <p>{% trans %}Przeglądaj{% endtrans %}</p>
-                                </a>
-                            </li>
-                            <li class="nav-item archive">
-                                <a class="nav-link button" href="{{ path('new_post') }}">
-                                    <i class="fa fa-circle-o nav-icon"></i>
-                                    <p>{% trans %}Stwórz post{% endtrans %}</p>
                                 </a>
                             </li>
                         </ul>
